Added SubmitApplication endpoint
