# src/DfE.ExternalApplications.Application/Applications/Commands/SubmitApplicationCommandValidator.cs
@@ -1,0 +1,15 @@
+using FluentValidation;
+using System.Runtime.CompilerServices;
+
+[assembly: InternalsVisibleTo("DfE.ExternalApplications.Application.Tests")]
+namespace DfE.ExternalApplications.Application.Applications.Commands;
+
+internal class SubmitApplicationCommandValidator : AbstractValidator<SubmitApplicationCommand>
+{
+    public SubmitApplicationCommandValidator()
+    {
+        RuleFor(x => x.ApplicationId)
+            .NotEmpty()
+            .WithMessage("Application ID is required");
+    }
+} 
