# src/GovUK.Dfe.ExternalApplications.Api.Client/Generated/swagger.json
@@ -211,6 +211,51 @@
         }
       }
     },
+    "/v1/Applications/{applicationId}/submit": {
+      "post": {
+        "tags": [
+          "Applications"
+        ],
+        "summary": "Submits an application, changing its status to Submitted.",
+        "operationId": "Applications_SubmitApplication",
+        "parameters": [
+          {
+            "name": "applicationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Application submitted successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApplicationDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid request data or application already submitted."
+          },
+          "401": {
+            "description": "Unauthorized - no valid user token"
+          },
+          "403": {
+            "description": "User does not have permission to submit this application"
+          },
+          "404": {
+            "description": "Application not found"
+          }
+        }
+      }
+    },
     "/v1/Templates/{templateId}/schema": {
       "get": {
         "tags": [
